--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="accordionCtn">
-            <div id="accordion">
+            <div id="accordion" class="accordion">
                 <div class="card">
                   <div class="card-header" id="headingOne">
                     <h5 class="mb-0">
